--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arpen-express",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "author": "Ross Basarevych <basarevych@gmail.com>",
   "description": "ARPEN",
@@ -9,14 +9,18 @@
     "url": "git+https://github.com/basarevych/arpen-express.git"
   },
   "dependencies": {
+    "body-parser": "~1.18.1",
+    "cookie-parser": "~1.4.3",
     "debug": "~3.0.1",
+    "express": "^4.16.1",
+    "morgan": "~1.8.2",
     "nerror": "~1.0.0",
     "pug": "~2.0.0-rc.4",
-    "express": "~4.15.4",
-    "serve-favicon": "~2.4.4",
-    "morgan": "~1.8.2",
-    "body-parser": "~1.18.1",
-    "cookie-parser": "~1.4.3"
+    "serve-favicon": "~2.4.4"
+  },
+  "peerDependencies": {
+    "arpen": "~0.2.9",
+    "express": "~4.15.4"
   },
   "devDependencies": {
     "eslint": "~4.6.1",
