--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arpen-express",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "author": "Ross Basarevych <basarevych@gmail.com>",
   "description": "ARPEN",
@@ -9,28 +9,28 @@
     "url": "git+https://github.com/basarevych/arpen-express.git"
   },
   "dependencies": {
-    "body-parser": "~1.18.1",
+    "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~3.0.1",
-    "morgan": "~1.8.2",
+    "debug": "~3.1.0",
+    "morgan": "~1.9.0",
     "nerror": "~1.0.0",
     "pug": "~2.0.0-rc.4",
-    "serve-favicon": "~2.4.4"
+    "serve-favicon": "~2.4.5"
   },
   "peerDependencies": {
-    "arpen": "~0.2.9",
-    "express": "~4.15.4"
+    "arpen": "^0.2.17",
+    "express": "^4.16.2"
   },
   "devDependencies": {
-    "eslint": "~4.6.1",
+    "eslint": "~4.8.0",
     "eslint-config-standard": "~10.2.1",
     "eslint-plugin-import": "~2.7.0",
-    "eslint-plugin-node": "~5.1.1",
+    "eslint-plugin-node": "~5.2.0",
     "eslint-plugin-promise": "~3.5.0",
     "eslint-plugin-standard": "~3.0.1",
     "ink-docstrap": "~1.3.0",
     "jasmine": "~2.8.0",
-    "jsdoc": "~3.5.4"
+    "jsdoc": "~3.5.5"
   },
   "engines": {
     "node": ">=8.0.0"
